components/liveChat/LiveChat.module.css
.chatContainer {
  width: 30rem;
  height: auto;
  position: absolute;
  margin-top: 2%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 10px;
  background-color: #f9fbff;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  overflow: hidden;
}

.chatHolder {
  display: flex;
  flex-direction: column;
  grid-template-rows: 1fr 100px;
  background-color: #ffe2dc;
}

.chatText {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 1em;
  padding: 1em;
  height: calc(100vh - 40px - 100px - 100px - 100px);
  overflow-y: auto;
}

.form {
  display: grid;
  grid-template-columns: 1fr 100px;
  border-top: 1px solid #eee;
}

.textarea {
  padding: 1em;
  border: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1.2em;
}

.button {
  border: 0;
  color: #FEC84D;
  font-weight: bold;
  font-size: 1.4em;
  background: #00B1B0;
}

.button:hover {
  background: #00B1B0;
  opacity: 0.25;
}

.button:disabled,
.button:hover:disabled {
  color: #00B1B0;
  background: #FF8370;
  opacity: 0.5;
}

.message1 {
  align-self: flex-start;
  background-color: #4CD7D0;
  padding: 1em;
  border-radius: 10px;
  flex-grow: 0;
  border-bottom-left-radius: 0;
}

.message2 {
  align-self: flex-end;
  background-color: #A4E8E0;
  padding: 1em;
  border-radius: 10px;
  flex-grow: 0;
  border-bottom-left-radius: 0;
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
  .chatContainer {
    width: 100vw;
    background-color: #f9fbff;
    margin-top: 10%;
  }
  .chatHolder {
    display: grid;
    grid-template-rows: 1fr 100px;
  }
  .chatText {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1em;
    padding: 1em;
    height: 82vh;
    overflow-y: auto;
  }
}

/* Smartphones (portrait) ----------- */
@media only screen and (max-width: 320px) {
  .chatContainer {
    width: 100vw;
    background-color: #f9fbff;
    margin-top: 10%;
  }
  .chatHolder {
    display: grid;
    grid-template-rows: 1fr 100px;
  }
  .chatText {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1em;
    padding: 1em;
    height: 82vh;
    overflow-y: auto;
  }
}

